--- a/polar/CSS/style.CSS
+++ b/polar/CSS/style.CSS
@@ -26,9 +26,13 @@ ul>li {
     list-style: none;
 }
 
+img {
+    max-width: 100%;
+}
+
 .hero {
     background-color: #F2CEDA;
-    height: 100vh;
+    height: 100%;
 }
 .container {
     max-width: 1040px;
@@ -92,7 +96,10 @@ ul>li {
     width: 50%;
     position: relative;
 }
-.content__img {}
+.content__img {
+
+}
+
 .hero__decor::after {
     content: "";
     display: block;
@@ -119,6 +126,7 @@ ul>li {
 }
 .Delivery {
     margin: 30px 10px 40px;
+    padding: 100px 0px;
 }
 .container {
 
@@ -223,12 +231,15 @@ ul>li {
 }
 
 .product__info {
+
 }
 
 .product__desc {
+
 }
 
 .product__coin {
+
 }
 
 .new {
@@ -239,36 +250,128 @@ ul>li {
     font-size: 20px;
     text-decoration-line: line-through;
 }
+.btn__link {
+    color: whitesmoke;
+    text-decoration: none;
+}
 
 .feedback {
+
 }
 
 .feedback__content {
+
 }
 .review {
+
 }
 .review__head {
+    display: flex;
+    align-items: center;
 }
 .avatar {
+    height: 60px;
+    width: 60px;
+    border-radius: 50%;
+    overflow: hidden;
 }
 .avatar__img {
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+    object-position: top center; 
 }
 .review__user {
+
 }
 .review__user-name {
+
 }
 .review__user-nationality {
+
 }
 .review__text {
-    
+    max-width: 345px;
+    padding-left: 23px;
 }
+
+.review__text::before {
+    content: '';
+    display: inline-block;
+    background-image: url(../IMG/icons/quots.svg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: contain;
+    width: 10px;
+    height: 10px;
+}
+
+.review__text::after {
+    content: '';
+    display: inline-block;
+    background-image: url(../IMG/icons/quots.svg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: contain;
+    width: 10px;
+    height: 10px;
+    transform: scale(-1, 1);
+    vertical-align: sub;
+}
+
+.feedback__slider {
+    max-width: 256px;
+}
+.avatars-slider {
+    padding: 0px 38px;
+    position: relative;
+}
+.avatars-slider__ctrls {
+    position: absolute;
+    display: flex;
+    position: absolute;
+    display: flex;
+    top: 55%;
+    left: 0;
+    width: 100%;
+    transform: translate(0px, -50%);
+    justify-content: space-between;
+}
+.avatars-slider__ctrl {
+}
+.avatars-slider__ctrl_direction_prev:first-child {
+    transform: scale(-1, 1);
+}
+.avatars-slider__icon:first-child {
+
+}
+.avatars-slider__ctrl_direction_next {
+}
+
 .feedback__decor {
     width: 564px;
     height: 442px;
 }
+
 .feedback__pic{
     width: 100%;
     height: 100%;
     object-fit: cover;
+}
+
+.avatar-slider__list {
+    display: flex;
+}
+.avatars-slider__item {
+ display: flex;display: flex;display: flex;display: flex;display: flex;
+}
+.avatar {
+
+}
+.avatar__img {
+
+}
+.active {
+
 }
 
